--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <div class="stats-container" id="top-games">
         <div class="stats-card" id="first-game">
             <h3>🥇 Top Funded Game</h3>
+            <p id="first-game-name">
         </div>
         <div class="stats-card" id="second-game">
             <h3>🥈 Runner Up</h3>
@@ -56,7 +57,6 @@
         <button id="all-btn">Show All Games</button>
     </div>
     <div id="games-container">
-
     </div>
 
     <script type="module" src="index.js"></script>
